--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.52.1",
+    "@tanstack/react-query-devtools": "^5.52.1",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "firebase": "^10.12.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
